--- a/backend/modules/orkestra-app/src/main/resources/application.yml
+++ b/backend/modules/orkestra-app/src/main/resources/application.yml
@@ -1,6 +1,12 @@
 server:
   port: 8080
 
+spring:
+  servlet:
+    multipart:
+      max-file-size: 1MB
+      max-request-size: 1MB
+
 management:
   endpoints:
     web:
